#509 | Automatically configure Database based on project settings during project import/refresh